# errorcode-generator

./: README.md  check.sh  errorcode_generator.py  pyproject.toml
example/multifile/: base.json  errorcodes.json
example/simple/: errorcodes.json  tpl.kt
