[tool.poetry]
name = "errorcode-generator"
version = "0.1.3"
description = "根据模板文件生成各种错误码文本格式"
authors = ["riag <riag@163.com>"]
license = "BSD-4-Clause"

packages = [
    { include = "errorcode_generator.py" },
]

[tool.poetry.scripts]
errorcode-generator = 'errorcode_generator:cli'


[tool.poetry.dependencies]
python = "^3.6"
jinja2 = "^2.11.2"
typing = "^3.7.4"

[tool.poetry.dev-dependencies]
mypy = "^0.790"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
